--- a/qualitybook2/Views/Shared/_Layout.cshtml
+++ b/qualitybook2/Views/Shared/_Layout.cshtml
@@ -47,7 +47,10 @@
         <nav class="navbar navbar-default navbar-fixed-top navigation-clean-search">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Quality Book</a>
+                    <img src="~/images/logo.png" alt="Quality Book" style="width:50px;height:auto;float:left;margin-left:20px;margin-right:10px;" />
+                    <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand" style="font-size:2rem;">
+                        Quality Book
+                    </a>
                     <button data-toggle="collapse" class="navbar-toggle collapsed" data-target="#navcol-1">
                         <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
                     </button>
