--- a/qualitybook2/Views/Admin/Categories/Index.cshtml
+++ b/qualitybook2/Views/Admin/Categories/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="row row-small">
-        <h2>Index</h2>
+        <h2>AdminCategoriesIndex</h2>
         <p>
             <a asp-action="Create">Create New</a>
         </p>
