--- a/qualitybook2/Views/Admin/Index.cshtml
+++ b/qualitybook2/Views/Admin/Index.cshtml
@@ -7,7 +7,7 @@
     <div class="row adminindex-menu">
             <ul>
                 <li><a asp-area="Admin" asp-controller="Categories" asp-action="index">Category Managment  |  </a></li>
-                <li><a href="#">Supplier Managment  |  </a></li>
+                <li><a asp-area="Admin" asp-controller="Suppliers" asp-action="index">Supplier Managment  |  </a></li>
                 <li><a href="#">Book Managment  |  </a></li>
                 <li><a href="#">Customer Managment  |  </a></li>
                 <li><a href="#">Order Managment</a></li>
