--- a/qualitybook2/Views/Admin/Index.cshtml
+++ b/qualitybook2/Views/Admin/Index.cshtml
@@ -8,8 +8,8 @@
             <ul>
                 <li><a asp-area="Admin" asp-controller="Categories" asp-action="index">Category Managment  |  </a></li>
                 <li><a asp-area="Admin" asp-controller="Suppliers" asp-action="index">Supplier Managment  |  </a></li>
-                <li><a href="#">Book Managment  |  </a></li>
-                <li><a href="#">Customer Managment  |  </a></li>
+                <li><a asp-area="Admin" asp-controller="Books" asp-action="index">Book Managment  |  </a></li>
+                <li><a asp-area="Admin" asp-controller="Customers" asp-action="index">Customer Managment  |  </a></li>
                 <li><a href="#">Order Managment</a></li>
             </ul>
     </div>
