added cusmoters management

--- a/qualitybook2/Views/Admin/Books/Index.cshtml
+++ b/qualitybook2/Views/Admin/Books/Index.cshtml
@@ -11,9 +11,9 @@
         <p>
             <a asp-action="Create">Create New</a>
         </p>
-        <table class="table">
+        <table class="table" style="border:2px solid white">
             <thead>
-                <tr>
+                <tr  style="border-bottom:2px solid white">
                     <th>
                         @Html.DisplayNameFor(model => model.BookName)
                     </th>
