--- a/qualitybook2/Views/Admin/Index.cshtml
+++ b/qualitybook2/Views/Admin/Index.cshtml
@@ -6,11 +6,11 @@
 <div class="container">
     <div class="row adminindex-menu">
             <ul>
-                <li><a asp-area="Admin" asp-controller="Categories" asp-action="index">Category Managment  |  </a></li>
-                <li><a asp-area="Admin" asp-controller="Suppliers" asp-action="index">Supplier Managment  |  </a></li>
-                <li><a asp-area="Admin" asp-controller="Books" asp-action="index">Book Managment  |  </a></li>
-                <li><a asp-area="Admin" asp-controller="Customers" asp-action="index">Customer Managment  |  </a></li>
-                <li><a href="#">Order Managment</a></li>
+                <li><a asp-area="Admin" asp-controller="Categories" asp-action="index">Category   |  </a></li>
+                <li><a asp-area="Admin" asp-controller="Suppliers" asp-action="index">Supplier   |  </a></li>
+                <li><a asp-area="Admin" asp-controller="Books" asp-action="index">Book   |  </a></li>
+                <li><a asp-area="Admin" asp-controller="Customers" asp-action="index">Customer   |  </a></li>
+                <li><a href="#">Order </a></li>
             </ul>
     </div>
     <div class="row">
@@ -33,7 +33,7 @@
                     <td>c1@gmail.com</td>
                     <td>1111111111</td>
                     <td>22 Kitiwake drive, Schnapper rock Auckland</td>
-                    <td class="adminindex-operation">Edit | Delete | Disable</td>
+                    <td class="adminindex-operation">LockOut | Edit | Delete</td>
                 </tr>
             </tbody>
         </table>
