--- a/qualitybook2/wwwroot/css/admin/admin-index.css
+++ b/qualitybook2/wwwroot/css/admin/admin-index.css
@@ -1,4 +1,5 @@
 ﻿.row.adminindex-menu {
+    margin:0 auto;
     margin-top:20px;
 }
 
@@ -11,7 +12,7 @@ ul li{
 }
 
 ul li a{
-    font-size: 2.2rem;
+    font-size: 3rem;
 }
 
 .adminindex-operation{
