--- a/qualitybook2/Views/Admin/Books/Create.cshtml
+++ b/qualitybook2/Views/Admin/Books/Create.cshtml
@@ -12,13 +12,18 @@
         <hr />
         <div class="row">
             <div class="col-md-10">
-                <form asp-action="Create">
+                <form asp-action="Create" enctype="multipart/form-data">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
                         <label asp-for="BookName" class="control-label"></label>
                         <input asp-for="BookName" class="form-control" />
                         <span asp-validation-for="BookName" class="text-danger"></span>
                     </div>
+
+                    <div class="form-group">
+                        <input type="file" name="_files" id="_files" />
+                    </div>
+                    
                     <div class="form-group">
                         <label asp-for="ShortDescription" class="control-label"></label>
                         <input asp-for="ShortDescription" class="form-control" />
