--- a/qualitybook2/Views/Admin/Books/Edit.cshtml
+++ b/qualitybook2/Views/Admin/Books/Edit.cshtml
@@ -12,7 +12,7 @@
         <hr />
         <div class="row">
             <div class="col-md-10">
-                <form asp-action="Edit">
+                <form asp-action="Edit"  enctype="multipart/form-data">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <input type="hidden" asp-for="BookId" />
                     <div class="form-group">
@@ -31,9 +31,11 @@
                         <span asp-validation-for="Description" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="ImageUrl" class="control-label"></label>
+                        <img style="width: 80px; height: auto;" src=/images/@Html.DisplayFor(modelItem =>modelItem.ImageUrl) >
+                        <input type="file" name="_files" id="_files" />
+                        @*<label asp-for="ImageUrl" class="control-label"></label>
                         <input asp-for="ImageUrl" class="form-control" />
-                        <span asp-validation-for="ImageUrl" class="text-danger"></span>
+                        <span asp-validation-for="ImageUrl" class="text-danger"></span>*@
                     </div>
                     <div class="form-group">
                         <label asp-for="Price" class="control-label"></label>
