added the implementation on admin home page

--- a/qualitybook2/Views/Admin/Index.cshtml
+++ b/qualitybook2/Views/Admin/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model qualitybook2.ViewModels.CustomersAndOrdersAndOrderDetailsViewModel
 @{
     ViewData["Title"] = "AdminIndex";
 }
@@ -10,7 +10,7 @@
                 <li><a asp-area="Admin" asp-controller="Suppliers" asp-action="index">Supplier   |  </a></li>
                 <li><a asp-area="Admin" asp-controller="Books" asp-action="index">Book   |  </a></li>
                 <li><a asp-area="Admin" asp-controller="Customers" asp-action="index">Customer   |  </a></li>
-                <li><a href="#">Order </a></li>
+                <li><a asp-area="Admin" asp-controller="" asp-action="index">Order </a></li>
             </ul>
     </div>
     <div class="row">
@@ -18,23 +18,32 @@
         <table class="table table1" style="border:2px solid white;">
             <thead class="thead-dark"  style="border:2px solid white;">
                 <tr>
-                    <th scope="col">Customer ID</th>
-                    <th scope="col">Customer Name</th>
+                    <th scope="col">ID</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Home Number</th>
+                    <th scope="col">Work Number</th>
+                    <th scope="col">Mobile</th>
                     <th scope="col">Email</th>
-                    <th scope="col">Phone</th>
                     <th scope="col">Address</th>
+                    <th scope="col">Locked due date</th>
                     <th scope="col">Operation</th>
                 </tr>
             </thead>
             <tbody>
-                <tr tabindex="1">
-                    <th scope="row">1</th>
-                    <td>customer1</td>
-                    <td>c1@gmail.com</td>
-                    <td>1111111111</td>
-                    <td>22 Kitiwake drive, Schnapper rock Auckland</td>
-                    <td class="adminindex-operation">LockOut | Edit | Delete</td>
-                </tr>
+                @foreach (Customer customer in Model.Customers)
+                {
+                    <tr tabindex="1">
+                        <td>@customer.CustomerId</td>
+                        <td>@customer.CustomerName</td>
+                        <td>@customer.PhoneNumberHome</td>
+                        <td>@customer.PhoneNumberWork</td>
+                        <td>@customer.PhoneNumberMobile</td>
+                        <td>@customer.Email</td>
+                        <td>@customer.Address</td>
+                        <td>@customer.LockoutEnd</td>
+                        <td class="adminindex-operation"><a asp-area="Admin" asp-controller="Home" asp-action="GetOrdersOfCustomer" asp-route-customerid=@customer.CustomerId>Select</a></td>
+                    </tr>
+                }
             </tbody>
         </table>
         <br />
@@ -42,10 +51,9 @@
         <table class="table table2"  style="border:2px solid white;">
             <thead class="thead-light"  style="border:2px solid white;">
                 <tr>
-                    <th scope="col">Order ID</th>
+                    <th scope="col">OrderId</th>
                     <th scope="col">Placed DateTime</th>
                     <th scope="col">Status</th>
-                    <th scope="col">TotalAmount</th>
                     <th scope="col">SubTotal</th>
                     <th scope="col">GST</th>
                     <th scope="col">GrandTotal</th>
@@ -53,33 +61,42 @@
                 </tr>
             </thead>
             <tbody>
-                <tr tabindex="2">
-                    <th scope="row">11111111111</th>
-                    <td>12-08-2019 12:00:01</td>
-                    <td>Shipped</td>
-                    <td>2</td>
-                    <td>$ 100</td>
-                    <td>$ 15</td>
-                    <td>$ 115</td>
-                    <td class="adminindex-operation">Change Status</td>
-                </tr>
-                <tr  tabindex="3">
-                    <th scope="row">22222222222</th>
-                    <td>22-08-2019 12:02:02</td>
-                    <td>Waiting</td>
-                    <td>1</td>
-                    <td>$ 200</td>
-                    <td>$ 30</td>
-                    <td>$ 230</td>
-                    <td class="adminindex-operation">Change Status</td>
-                </tr>
+                @{
+                    if (Model.Orders != null)
+                    {
+                        @foreach (Order order in Model.Orders)
+                        {
+                            <tr tabindex="2">
+                                <td>@order.OrderId</td>
+                                <td>@order.OrderPlacedDateTime</td>
+                                <td>@order.State</td>
+                                <td>@order.Subtotal.ToString("c")</td>
+                                <td>@order.GST.ToString("c")</td>
+                                <td>@order.GrandTotal.ToString("c")</td>
+                                <td class="adminindex-operation">
+                                    @{
+                                        IDictionary<string, string> routeData = new Dictionary<string, string>();
+                                        routeData.Add("customerId", Model.CustomerIdCurrent);
+                                        routeData.Add("orderId", order.OrderId.ToString());
+                                    }
+                                    <a asp-area="Admin" asp-controller="Home" asp-action="GetOrderDetailsOfOrder" asp-all-route-data="routeData">Select</a>
+                                    |
+                                    Change To Waiting
+                                </td>
+                            </tr>
+                        }
+                    }
+                }
+
             </tbody>
         </table>
         <br />
+
         <h2>Order Details</h2>
         <table class="table table3"  style="border:2px solid white;">
             <thead class="thead-light"  style="border:2px solid white;">
                 <tr>
+                    <th scope="col">Book Id</th>
                     <th scope="col">Book Name</th>
                     <th scope="col">Category</th>
                     <th scope="col">Supplier</th>
@@ -88,20 +105,22 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <th scope="row">book1</th>
-                    <td>sprot and art</td>
-                    <td>Microsoft</td>
-                    <td>$ 30</td>
-                    <td>1</td>
-                </tr>
-                <tr>
-                    <th scope="row">book2</th>
-                    <td>Maori culture</td>
-                    <td>New Zealand</td>
-                    <td>$ 70</td>
-                    <td>1</td>
-                </tr>
+                @{
+                    if (Model.OrderDetails != null)
+                    {
+                        @foreach (OrderDetail orderDetail in Model.OrderDetails)
+                        {
+                            <tr>
+                                <td>@orderDetail.BookId</td>
+                                <td>@orderDetail.book.BookName</td>
+                                <td>@orderDetail.book.Category.CategoryName</td>
+                                <td>@orderDetail.book.Supplier.SupplierName</td>
+                                <td>@orderDetail.book.Price.ToString("c")</td>
+                                <td>@orderDetail.Amount</td>
+                            </tr>
+                        }
+                    }
+                }
             </tbody>
         </table>
     </div>
