--- a/qualitybook2/Views/Shared/_Layout.cshtml
+++ b/qualitybook2/Views/Shared/_Layout.cshtml
@@ -16,6 +16,10 @@
         {
             <link rel="stylesheet" href="~/css/home.css">
         }
+        @if (@ViewData["Title"].ToString() == "Profile")
+        {
+            <link rel="stylesheet" href="~/css/profile.css">
+        }
         @if (@ViewData["Title"].ToString() == "BookList")
         {
             <link rel="stylesheet" href="~/css/booklist.css">
@@ -103,7 +107,7 @@
             <link rel="stylesheet" href="~/css/admin/customers/admincustomers-detail.css">
         }
 
-        
+
     </environment>
     <environment names="Staging,Production">
         <link rel="stylesheet" href="~/css/site.min.css">
