--- a/qualitybook2/Views/Admin/Index.cshtml
+++ b/qualitybook2/Views/Admin/Index.cshtml
@@ -5,12 +5,12 @@
 
 <div class="container">
     <div class="row adminindex-menu">
-            <ul>
-                <li><a asp-area="Admin" asp-controller="Categories" asp-action="index">Category   |  </a></li>
-                <li><a asp-area="Admin" asp-controller="Suppliers" asp-action="index">Supplier   |  </a></li>
-                <li><a asp-area="Admin" asp-controller="Books" asp-action="index">Book   |  </a></li>
-                <li><a asp-area="Admin" asp-controller="Customers" asp-action="index">Customer   |  </a></li>
-                <li><a asp-area="Admin" asp-controller="" asp-action="index">Order </a></li>
+            <ul style="margin-top:20px;">
+                <li style="display:inline-block;font-size:2.5rem;"><a asp-area="Admin" asp-controller="Categories" asp-action="index">Category   |  </a></li>
+                <li style="display:inline-block;font-size:2.5rem;"><a asp-area="Admin" asp-controller="Suppliers" asp-action="index">Supplier   |  </a></li>
+                <li style="display:inline-block;font-size:2.5rem;"><a asp-area="Admin" asp-controller="Books" asp-action="index">Book   |  </a></li>
+                <li style="display:inline-block;font-size:2.5rem;"><a asp-area="Admin" asp-controller="Customers" asp-action="index">Customer   |  </a></li>
+                <li style="display:inline-block;font-size:2.5rem;"><a asp-area="Admin" asp-controller="" asp-action="index">Order </a></li>
             </ul>
     </div>
     <div class="row">
